package com.konffach.app.features.settings.ui

object SettingsScreenTestTags {
    const val LOG_OUT = "settings_clear_tokens_button"
}
